// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChartRowDescription where date will change with time zone 1`] = `
<div>
  <div
    class="description_container"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1808mag-MuiPaper-root-MuiAccordion-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <h3
        class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
      >
        <button
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1f1pi2l-MuiButtonBase-root-MuiAccordionSummary-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-yfrx4k-MuiAccordionSummary-content"
          >
            <div
              class="description_title"
            >
              Om kvalitetsindikatoren
            </div>
          </span>
          <span
            class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
        </button>
      </h3>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiAccordion-region css-at4ued-MuiAccordion-region"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
              >
                <p
                  style="margin: 0px;"
                >
                  Denne kvalitetsindikatoren er definert som andel pasienter med...
                </p>
                <p>
                  Disse dataene ble lastet opp
                   
                  1. januar 2000
                  .
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChartRowDescription with date equals zero and Norwegian characters 1`] = `
<div>
  <div
    class="description_container"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1808mag-MuiPaper-root-MuiAccordion-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <h3
        class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
      >
        <button
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1f1pi2l-MuiButtonBase-root-MuiAccordionSummary-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-yfrx4k-MuiAccordionSummary-content"
          >
            <div
              class="description_title"
            >
              Om kvalitetsindikatoren
            </div>
          </span>
          <span
            class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
        </button>
      </h3>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiAccordion-region css-at4ued-MuiAccordion-region"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
              >
                <p
                  style="margin: 0px;"
                >
                  Vi prøver ågså særnårske bokstaver
                </p>
                <p>
                  Disse dataene ble lastet opp
                   
                  1. januar 1970
                  .
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChartRowDescription with non-default title and +02:00 time zone 1`] = `
<div>
  <div
    class="description_container"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1808mag-MuiPaper-root-MuiAccordion-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <h3
        class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
      >
        <button
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1f1pi2l-MuiButtonBase-root-MuiAccordionSummary-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-yfrx4k-MuiAccordionSummary-content"
          >
            <div
              class="description_title"
            >
              Dette er en annen tittel
            </div>
          </span>
          <span
            class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
        </button>
      </h3>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiAccordion-region css-at4ued-MuiAccordion-region"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
              >
                <p
                  style="margin: 0px;"
                >
                  Denne kvalitetsindikatoren er definert som andel pasienter med...
                </p>
                <p>
                  Disse dataene ble lastet opp
                   
                  10. mars 1979
                  .
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChartRowDescription with some markdown 1`] = `
<div>
  <div
    class="description_container"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1808mag-MuiPaper-root-MuiAccordion-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <h3
        class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
      >
        <button
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1f1pi2l-MuiButtonBase-root-MuiAccordionSummary-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-yfrx4k-MuiAccordionSummary-content"
          >
            <div
              class="description_title"
            >
              Dette er en annen tittel
            </div>
          </span>
          <span
            class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
        </button>
      </h3>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiAccordion-region css-at4ued-MuiAccordion-region"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
              >
                <p
                  style="margin: 0px;"
                >
                  Litt tekst 
                  <em>
                    som er kursiv
                  </em>
                   og 
                  <strong>
                    og fet
                  </strong>
                  . Legge inn en 
                  <a
                    href="https://www.nrk.no/"
                    rel="noreferrer"
                    style="color: rgb(0, 100, 146);"
                    target="_blank"
                  >
                    lenke
                  </a>
                   her.
                </p>
                

                <pre>
                  <code>
                      Til og med bilde
  
  ![and](https://loremflickr.com/320/240)
  
  Prøve med fotnote[^1].
  
  [^1]: Som står her.

                  </code>
                </pre>
                <p>
                  Disse dataene ble lastet opp
                   
                  10. mars 1979
                  .
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
